# LCEL_Company_Extractor

./: .env.example  .gitignore  README.md  docker-compose.yml  essay.txt  pyproject.toml  setup.cfg
src/: cli.py  list_companies.py
src/agents/: company_agent.py  tooling.py
src/db/: models.py  session.py
src/extractors/: company_schema.py  normalize.py  paragraphs.py
