[metadata]
name = lcel-company-extractor
version = 0.1.0
description = LCEL agent that extracts company details and writes to PostgreSQL
author = User

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    langchain>=0.3.7
    langchain-aws>=0.2.0
    boto3>=1.34.0
    psycopg2-binary>=2.9.9
    pydantic>=2.9.0
    python-dotenv>=1.0.1
    dateparser>=1.2.0
    sqlalchemy>=2.0.34

[options.packages.find]
where = src